
MySQL Connector/Python
Copyright (c) 2009, 2020, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.0.23
=======
- WL#14263: Add support for SCRAM-SHA-256
- WL#14238: Deprecate Python 2.7 support
- WL#14215: Replace language in APIs and source code/docs
- WL#14213: Support GSSAPI - Kerberos auth
- BUG#31882419: Fix error when getting the connection ID from a CMySQLConnection
- BUG#29195610: Fix cursor.callproc() using namedtuple and dictionary cursors
- BUG#26834307: Make cursor.fetchone() and cursor.fetchmany() PEP 249 compliant
- BUG#24938411: Fix datetime microsecond conversion

v8.0.22
=======

- WL#14110: Add support for SCRAM-SHA-1
- WL#14098: Add option to specify LOAD DATA LOCAL IN PATH
- WL#13997: Refactoring of the building system
- WL#13995: Add support for configurable compression levels
- WL#13994: Support clear text passwords
- WL#13380: Add support for Django 3.0
- BUG#31335275: Fix memory leak when using the Decimal data type
- BUG#31267800: Include copyright header in the modules generated by protoc
- BUG#27535063: Fix wrong error message when specifying the collation for a non TEXT field
- BUG#20811567: Support use_pure option in config_files

v8.0.21
=======

- WL#13847: Add support for context managers
- WL#13059: Add schema validation support
- WL#12501: Connection compression
- BUG#31098686: Unittests for CMD_CHANGE_USER does not cover CMySQLConnection defaults
- BUG#31060730: Skip pure Python tests if Protobuf is not available
- BUG#30996790: Fix connect_timeout option behavior
- BUG#30950184: Fix error when using the fractional part in DATETIME
- BUG#29808262: Fix BLOB types conversion
- BUG#29181907: Fix discovering of MySQL libraries
- BUG#28627768: JSON_REPLACE not working correctly for SQL tables
- BUG#27602636: Expressions in Table.update.set() raises an exception
- BUG#27489937: Support for connection pools in the C extension

v8.0.20
=======
