@@ -14,6 +14,7 @@ v8.0.23
 - WL#14238: Deprecate Python 2.7 support
 - WL#14215: Replace language in APIs and source code/docs
 - WL#14213: Support GSSAPI - Kerberos auth
+- BUG#32165864: Fix segmentation fault when using invalid SQL with prepared statements
 - BUG#31882419: Fix error when getting the connection ID from a CMySQLConnection
 - BUG#29195610: Fix cursor.callproc() using namedtuple and dictionary cursors
 - BUG#26834307: Make cursor.fetchone() and cursor.fetchmany() PEP 249 compliant
